--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tptags",
   "version": "1.0.0",
+  "bin": "server.js",
   "main": "index.js",
   "scripts": {
     "start": "node server.js"
@@ -12,5 +13,12 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0"
+  },
+  "pkg": {
+    "targets": [
+      "node18-win-x64",
+      "node18-macos-x64",
+      "node18-linux-x64"
+    ]
   }
 }
