--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "bin": "server.js",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "compress": "pkg ."
   },
   "keywords": [],
   "author": "",
